Next release
------------

Features
~~~~~~~~

- The transaction manager has been converted to a Pyramid 1.1.1 "tween"
  (instead of an event subscriber).

Backwards Incompatibilities
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Incompatible with Pyramid < 1.1.1.  Use version 0.2 if you need
  compatibility with older Pyramids.

- The ``default_commit_veto`` no longer checks for the presence of the
  ``X-Tm-Abort`` header when attempting to figure out whether the transaction
  should be aborted (although it still checks for the ``X-Tm`` header).  Use
  version 0.2 or a custom commit veto function if your application depends on
  the ``X-Tm-Abort`` header.

- A commit veto is now called with two arguments: ``request`` and
  ``response``.  The ``request`` is the webob request that caused the
  transaction manager to become active.  The ``response`` is the response
  returned by the Pyramid application.  This call signature is incompatible
  with older versions.  The call signature of a ``pyramid_tm`` 0.2 and older
  commit veto accepted three arguments: ``environ``, ``status``, and
  ``headers``.  If you're using a custom ``commit_veto`` function, you'll
  need to either convert your existing function to use the new calling
  convention or use a wrapper to make it compatible with the new calling
  convention.  Here's a simple wrapper function
  (``bwcompat_commit_veto_wrapper``) that will allow you to use your existing
  custom commit veto function::

     def bwcompat_commit_veto_wrapper(request, response):
         return my_custom_commit_veto(request.environ, response.status, 
                                      response.headerlist)

0.2 (2011-07-18)
----------------

- A new header ``X-Tm`` is now honored by the ``default_commit_veto`` commit
veto hook. If this header exists in the headerlist, its value must be a
string. If its value is ``commit``, the transaction will be committed
regardless of the status code or the value of ``X-Tm-Abort``. If the value