@@ -7,11 +7,15 @@ Features
 - The transaction manager has been converted to a Pyramid 1.1.1 "tween"
   (instead of an event subscriber).
 
+- The transaction manager will now retry retryable exceptions (such as a ZODB
+  conflict error) by default.  See the ``Retrying`` section of the
+  documentation.
+
 Backwards Incompatibilities
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~
 
-- Incompatible with Pyramid < 1.1.1.  Use version 0.2 if you need
-  compatibility with older Pyramids.
+- Incompatible with Pyramid < 1.1.1dev.  Use ``pyramid_tm`` version 0.2 if
+  you need compatibility with an older Pyramid installation.
 
 - The ``default_commit_veto`` no longer checks for the presence of the
   ``X-Tm-Abort`` header when attempting to figure out whether the transaction
